@@ -1,3 +1,10 @@
+2023-09-01  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.el (tramp-completion-multi-hop-methods): Fix :type.
+
+	* tramp-container.el (tramp-completion-multi-hop-methods):
+	Add methods properly.
+
 2023-08-31  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el (tramp-completion-multi-hop-methods): Adapt docstring.
